[gd_scene load_steps=6 format=3 uid="uid://wp70152thk74"]

[ext_resource type="Script" path="res://frog_baby/frog_baby.gd" id="1_ypr2y"]
[ext_resource type="Texture2D" uid="uid://bjqs76hsirhdn" path="res://frog_baby/ball_base.png" id="2_gx2kl"]
[ext_resource type="Texture2D" uid="uid://exnm5uuylgjc" path="res://frog_baby/statue.PNG" id="3_31ang"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_wpm7w"]
radius = 32.0
height = 192.0

[sub_resource type="CircleShape2D" id="CircleShape2D_ox8re"]
radius = 37.0

[node name="FrogBaby" type="CharacterBody2D"]
collision_layer = 4
collision_mask = 2
script = ExtResource("1_ypr2y")

[node name="BallSprite" type="Sprite2D" parent="."]
texture = ExtResource("2_gx2kl")

[node name="BabySprite" type="Sprite2D" parent="."]
position = Vector2(0, -120)
texture = ExtResource("3_31ang")

[node name="BabyCollision" type="CollisionShape2D" parent="."]
position = Vector2(0, -128)
shape = SubResource("CapsuleShape2D_wpm7w")
one_way_collision = true

[node name="BallCollision" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_ox8re")
one_way_collision = true
